--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -7,7 +7,7 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 .wf-active body {
-  font-family: 'Spectral', serif;
+  font-family: 'EB Garamond', serif;
 }
 .wf-active h1,
 .wf-active .button {
