--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -86,7 +86,7 @@ ol.contentlink-bc > li+li:before {
 }
 #header a {
   color: white;
-  /* font-weight: 600; */
+  font-weight: 600;
 }
 #header .contentlink-bc li:first-child {
   text-transform: uppercase;
@@ -104,7 +104,7 @@ ol.contentlink-bc > li+li:before {
   }
 }
 #header > div .globalmenu a {
-  /* font-weight: 800; */
+  font-weight: 800;
 }
 .hdesc {
   color: white;
@@ -682,6 +682,8 @@ svg.fa-facebook {
   #content .contenttoc .button {
     max-width: none;
   }
+  .hdesc.driks_list,
+  .hdesc.wine_list,
   .hdesc.regular_menu {
     padding-bottom: 18em;
   }
@@ -692,6 +694,8 @@ svg.fa-facebook {
   }
 }
 @media all and (min-width: 60em) {
+  .hdesc.wine_list,
+  .hdesc.driks_list,  
   .hdesc.regular_menu {
     padding-bottom: 14em;
   }
