--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -119,7 +119,7 @@ ol.contentlink-bc > li+li:before {
   background-image: url("/files/design/header.jpg");
 }
 .hdesc.wine_list,
-.hdesc.driks_list,
+.hdesc.baverages,
 .hdesc.menu,
 .hdesc.regular_menu {
   background-image: url("/files/design/menu-header.jpg");
@@ -137,7 +137,7 @@ media all and (min-width: 62em) {
     background-image: url("/files/full/design/header.jpg");
   }
   .hdesc.wine_list,
-  .hdesc.driks_list,
+  .hdesc.baverages,
   .hdesc.menu,
   .hdesc.regular_menu {
     background-image: url("/files/full/design/menu-header.jpg");
@@ -687,7 +687,7 @@ svg.fa-facebook {
 .hdesc.regular_menu {
   padding-bottom: 5em;
 }
-#content .hdesc.driks_list + ol.contenttoc.button-list,
+#content .hdesc.baverages + ol.contenttoc.button-list,
 #content .hdesc.wine_list + ol.contenttoc.button-list {
   max-width: 50em
 }
@@ -695,7 +695,7 @@ svg.fa-facebook {
   #content .contenttoc .button {
     max-width: none;
   }
-  .hdesc.driks_list,
+  .hdesc.baverages,
   .hdesc.wine_list,
   .hdesc.regular_menu {
     padding-bottom: 18em;
@@ -707,7 +707,7 @@ svg.fa-facebook {
   }
 }
 @media all and (min-width: 60em) {
-  .hdesc.driks_list,
+  .hdesc.baverages,
   .hdesc.wine_list,
   .hdesc.regular_menu {
     padding-bottom: 14em;
@@ -935,12 +935,12 @@ dl.klima dt:first-child + dd {
 }
 /*********************************/
 body[data-link="/wine_list"] #content > .section,
-body[data-link="/driks_list"] #content > .section {
+body[data-link="/baverages"] #content > .section {
   margin-top: 8em;
 }
 @media (min-width: 60em) {
   body[data-link="/wine_list"] #content > .section,
-  body[data-link="/driks_list"] #content > .section {
+  body[data-link="/baverages"] #content > .section {
     display: flex;
     flex-wrap: wrap;
     max-width: 87em;
@@ -948,7 +948,7 @@ body[data-link="/driks_list"] #content > .section {
     margin-right: auto;
   }
   body[data-link="/wine_list"] #content > .section > div,
-  body[data-link="/driks_list"] #content > .section > div {
+  body[data-link="/baverages"] #content > .section > div {
     flex: 0 1 48%;
     max-width: 48%;
     margin: 0 1%;
