--- a/themes/default/all.css
+++ b/themes/default/all.css
@@ -52,16 +52,23 @@ body #footer > * {
   font-weight: normal;
 }
 #content .meal-oneline dt {
-  width: 80%;
-  float: left;
-  clear: left;
+  width: 79%;
+  /* float: left; */
+  /* clear: left; */
   margin-bottom: 0;
   line-height: 1;
+  margin-bottom: 0.5em;
 }
 #content .meal-oneline dd.price {
-  width: 20%;
+  width: 19%;
   margin-top: 0;
   margin-bottom: 0.5em;
+  text-align: right;
+}
+#content .meal-oneline dt,
+#content .meal-oneline dd.price {
+  box-sizing: border-box;
+  display: inline-block;
 }
 #content .meal-oneline dd:not(.price) {
   display: none;
