--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -982,3 +982,18 @@ body[data-link="/beverages"] #content > .section {
   }
 }
 /*********************************/
+body.inputvar dl dt {
+  font-size: 1.2em;
+  font-weight: 600;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+body.inputvar dl dd {
+  margin: 0;
+}
+body.inputvar textarea {
+  border: thin solid #999;
+  border-radius: 0;
+  min-height: 7.5em;
+}
+/*********************************/
