--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -996,4 +996,7 @@ body.inputvar textarea {
   border-radius: 0;
   min-height: 7.5em;
 }
+body.inputvar input[name="username"] {
+  max-width: 13.5em !important;
+} 
 /*********************************/
