--- a/themes/default/all.css
+++ b/themes/default/all.css
@@ -43,6 +43,7 @@ h2.break {
   justify-content: flex-end;
   font-weight: 700;
   margin-top: 0.5em;
+  text-align: right;
 }
 .meal dd.price > span {
   display: flex;
