--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -69,7 +69,7 @@ ol.contentlink-bc > li+li:before {
   vertical-align: 0;
 }
 /*********************************/
-.term-hidden {
+.definition-hidden {
   display: none !important;
 }
 .list.multiple {
