--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -208,6 +208,11 @@ ol.contentlink-bc > li+li:before {
   justify-content: center;
   border: none;
 }
+#content .button.send {
+  margin-top: 1em;
+  background: #388E3C;
+  color: white;
+}
 #content a.button:not([href]) {
   box-shadow: none;  
 }
