--- a/themes/print-listek.css
+++ b/themes/print-listek.css
@@ -1,5 +1,5 @@
 /*@import url('https://fonts.googleapis.com/css?family=Abhaya+Libre:400,500|Alegreya:400,500|Rasa:400,500');*/
-@import url('https://fonts.googleapis.com/css?family=Rasa:400,500');
+@import url('https://fonts.googleapis.com/css?family=Rasa:400,500&display=swap');
 
 h1,h2,h3,h4,h5,h6,p,ul,ol,dl,
 div.paragraph, div.list, pre {
