--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -174,6 +174,8 @@ ol.contentlink-bc > li+li:before {
 }
 #footer a {
   color: white;
+  padding: 0.5em 0;
+  display: inline-block;
 }
 /*
 #footer:before {
@@ -979,12 +981,13 @@ dl.klima dt:first-child + dd {
 #footer ul.social,
 #footer ul.globalmenu {
   display: inline-block;
-  height: 7em;
+  height: 9em;
   vertical-align: bottom;
   text-transform: uppercase;
 }
 #footer ul.globalmenu + ul {
   justify-content: left;
+  align-items: center;
 }
 #footer ul li {
   text-align: left;
@@ -994,6 +997,7 @@ dl.klima dt:first-child + dd {
   display: inline-flex;
   align-items: center;
   text-transform: none;
+  padding: 0.5em 0;
 }
 #footer ul.social li a svg {
   margin-right: 0.25em;
