--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -645,8 +645,8 @@ svg.fa-facebook {
   text-align: center;
   max-width: 27em;
 }
-.content-img .photoswipe img,
-.jaroslav_honzajk .photoswipe img {
+.content-img .photoswipe .imgwrap,
+.jaroslav_honzajk .photoswipe .imgwrap {
   width: 35em;
   max-width: 100%;
 }
@@ -680,8 +680,8 @@ svg.fa-facebook {
     padding-left: 4rem;
     padding-right: 4rem;
   }
-  .content-img .photoswipe img,
-  .jaroslav_honzajk .photoswipe img {
+  .content-img .photoswipe .imgwrap,
+  .jaroslav_honzajk .photoswipe .imgwrap {
     width: 38em;
     max-width: 48vw;
   }
