--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -1122,21 +1122,21 @@ body.inputvar input[name="username"] {
   display: none;
 }
 /*********************************/
-.inputvar #content .completable-input {
+.inputvar #content .js-completable-input {
   border: none;
   border-radius: 0;
   background: #FAFAFA;
 }
-.inputvar #content .completable-input-wrapper {
+.inputvar #content .js-completable-wrapper {
   background: #ECEFF1;
   display: flex;
   align-items: center;
   position: relative;
 }
-.inputvar #content .completable-input-wrapper > svg {
+.inputvar #content .js-completable-wrapper > svg {
   padding: 0 0.5em
 }
-.inputvar #content .completable-input-wrapper ul.navigList {
+.inputvar #content .js-completable-wrapper ul.navigList {
   top: 3.5em;
   left: 2em;
 }
