--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -1173,4 +1173,7 @@ body.inputvar input[name="username"] {
 .catering #content {
   background: #F5F5F5;
 }
+.hideable-nohide a.hideable-switch:before {
+  font-family: "Courier New", Courier, monospace;
+}
 /*********************************/
