--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -1174,6 +1174,6 @@ body.inputvar input[name="username"] {
   background: #F5F5F5;
 }
 .hideable-nohide a.hideable-switch:before {
-  font-family: Arial, sans-serif;
+  font-family: Georgia, serif;
 }
 /*********************************/
